burger menu alignment issue

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,6 @@
 .main-container {
   position: absolute;
   width: 100%;
-  display: flex;
   justify-content: center;
 }
 
